--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>admin</title>
   </head>
-  <body>
+  <body style="position: absolute;width: 100%;height: 100%;margin: 0">
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
